<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/jp_cayhanecamel_champaca_white"
                android:orientation="vertical">

    <TextView
        android:id="@+id/jp_cayhanecamel_champaca_action_bar_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:paddingBottom="16dp"
        android:layout_marginLeft="20dp"
        android:ellipsize="end"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/jp_cayhanecamel_champaca_txt_color_gy01"
        android:textSize="@dimen/jp_cayhanecamel_champaca_txt_32sp"/>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:fab="http://schemas.android.com/apk/res-auto"
                 android:background="@color/jp_cayhanecamel_champaca_white"
                 android:layout_below="@+id/jp_cayhanecamel_champaca_action_bar_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/jp_cayhanecamel_champaca_action_bar_title">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/jp_cayhanecamel_champaca_table_base"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TableLayout
                        android:id="@+id/jp_cayhanecamel_champaca_table_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>
        </HorizontalScrollView>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:layout_gravity="right|bottom"
            android:id="@+id/jp_cayhanecamel_champaca_multiple_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            fab:fab_addButtonColorNormal="@color/jp_cayhanecamel_champaca_white"
            fab:fab_addButtonColorPressed="@color/jp_cayhanecamel_champaca_white_pressed"
            fab:fab_addButtonPlusIconColor="@color/jp_cayhanecamel_champaca_half_black"
            fab:fab_labelStyle="@style/jp_cayhanecamel_champaca_menu_labels_style"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">


            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/jp_cayhanecamel_champaca_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_icon="@drawable/jp_cayhanecamel_champaca_ic_filter"
                fab:fab_colorNormal="@color/jp_cayhanecamel_champaca_white"
                fab:fab_title="@string/jp_cayhanecamel_champaca_filter"
                fab:fab_colorPressed="@color/jp_cayhanecamel_champaca_white_pressed"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_icon="@drawable/jp_cayhanecamel_champaca_ic_add"
                fab:fab_colorNormal="@color/jp_cayhanecamel_champaca_white"
                fab:fab_title="@string/jp_cayhanecamel_champaca_insert"
                fab:fab_colorPressed="@color/jp_cayhanecamel_champaca_white_pressed"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/jp_cayhanecamel_champaca_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_icon="@drawable/jp_cayhanecamel_champaca_ic_export"
                fab:fab_colorNormal="@color/jp_cayhanecamel_champaca_white"
                fab:fab_title="@string/jp_cayhanecamel_champaca_export"
                fab:fab_colorPressed="@color/jp_cayhanecamel_champaca_white_pressed"/>


            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/jp_cayhanecamel_champaca_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_icon="@drawable/jp_cayhanecamel_champaca_ic_delete_grey600_24dp"
                fab:fab_colorNormal="@color/jp_cayhanecamel_champaca_white"
                fab:fab_title="@string/jp_cayhanecamel_champaca_delete"
                fab:fab_colorPressed="@color/jp_cayhanecamel_champaca_white_pressed"/>


        </com.getbase.floatingactionbutton.FloatingActionsMenu>


    </FrameLayout>


</RelativeLayout>